divide all logic to user and group
